--- a/test/fixtures/terms.yml
+++ b/test/fixtures/terms.yml
@@ -1,10 +1,10 @@
 t1:
-  name: 2008-1
+  name: GP1
   begin_date: 2008/08/01
   end_date: 2008/11/17
 	
 t2:
-  name: 2008-2
+  name: GP2
   begin_date: 2008/08/01
   end_date: 2008/11/17
 
