--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,19 +1,3 @@
-<%
-  @@words = File.open("/usr/share/dict/words").collect do |line|
-    line.strip
-  end
-
-# provide a string with num random words in it.
-  def self.random_words(num = 1)
-    w = []
-    num.times do
-      w << @@words[rand(@@words.size)]
-    end
-    w.join(" ")
-  end
-
-%>
-
 rich:
   type: Student
   site: nda
@@ -57,6 +41,14 @@ kim:
   last_name: Hurt
   email: kimy@asdf.xom
 
+tammy:
+  type: Teacher Assistant
+  site: nda
+  short_name: tamtam
+  first_name: Tammy
+  last_name: Smith
+  email: tammy@lkajsd.com
+
 tom:
   type: Admin
   site: nda
@@ -64,6 +56,22 @@ tom:
   first_name: Tom
   last_name: Rec
   email: tomrec@aklsdf.com
+
+<%
+  @@words = File.open("/usr/share/dict/words").collect do |line|
+    line.strip
+  end
+
+# provide a string with num random words in it.
+  def self.random_words(num = 1)
+    w = []
+    num.times do
+      w << @@words[rand(@@words.size)]
+    end
+    w.join(" ")
+  end
+
+%>
 
 <% for t in 1..30 %>
 user_<%= t %>:
