--- a/test/fixtures/terms.yml
+++ b/test/fixtures/terms.yml
@@ -2,9 +2,16 @@ t1:
   name: GP1
   begin_date: 2008/08/01
   end_date: 2008/11/17
+  active: true
 	
 t2:
   name: GP2
   begin_date: 2008/08/01
   end_date: 2008/11/17
+  active: true
 
+t3:
+  name: GP3
+  begin_date: 2008/11/17
+  end_date: 2009/04/28
+  active: false
