--- a/test/fixtures/courses.yml
+++ b/test/fixtures/courses.yml
@@ -1,6 +1,6 @@
 math7s:
   name: Math 7S
-  teacher: kim
+  teacher_id: 1069
   term: t1
   grading_scale: s
   course_att_id: 1
@@ -8,7 +8,7 @@ math7s:
 
 math8hs:
   name: Homeroom
-  teacher: kim
+  teacher_id: 1069
   term: t1
   grading_scale: s
   course_att_id: 1
@@ -16,7 +16,7 @@ math8hs:
 
 math8hpf:
   name: Math 8H
-  teacher: kim
+  teacher_id: 1069
   term: t1
   grading_scale: pf
   course_att_id: 1
@@ -24,7 +24,7 @@ math8hpf:
 
 math8s-t1:
   name: Math 8S
-  teacher: kim
+  teacher_id: 1069
   term: t1
   grading_scale: s
   course_att_id: 1
@@ -32,7 +32,7 @@ math8s-t1:
 
 math8s-t2:
   name: Math 8S
-  teacher: kim
+  teacher_id: 1069
   term: t2
   grading_scale: s
   course_att_id: 1
@@ -40,7 +40,7 @@ math8s-t2:
 
 english-t1:
   name: English
-  teacher: bob
+  teacher_id: 1070
   term: t1
   grading_scale: s
   course_att_id: 1
@@ -48,7 +48,7 @@ english-t1:
   
 english-t2:
   name: English
-  teacher: bob
+  teacher_id: 1070
   term: t2
   grading_scale: s
   course_att_id: 1
@@ -56,7 +56,7 @@ english-t2:
 
 music-t1:
   name: Music
-  teacher: bob
+  teacher_id: 1070
   term: t1
   grading_scale: s
   course_att_id: 1
