Highlighting the current selection is working now.
I am trying to smooth out some rough edges in the user
interface.  The biggest change is to the leftmost selection
table - it should now light up Yellow to show you which
data you are currently viewing.

I am also thinking about splitting the Course types into
sub-types of Coureses, kinda like Teachers/Students are
sub-types of Users.  I think it would help smooth things
out and allow a bit cleaner interface to the model.

--- a/test/fixtures/courses.yml
+++ b/test/fixtures/courses.yml
@@ -6,9 +6,17 @@ math7s:
   course_att_id: 1
   course_type: s
 
-homeroom-t1:
-  name: Homeroom
+homeroom-k-t1:
+  name: 8H Homeroom
   teacher_id: 1069
+  term: t1
+  grading_scale: s
+  course_att_id: 1
+  course_type: h
+
+homeroom-b-t1:
+  name: 1B Homeroom
+  teacher_id: 1070
   term: t1
   grading_scale: s
   course_att_id: 1
