Grades are now being displayed properly, if not a bit sparse.  :)
The next step is to build a grade grid so that I can do things like
show the class average, a students running grade, etc.

--- a/test/fixtures/enrollments.yml
+++ b/test/fixtures/enrollments.yml
@@ -14,3 +14,11 @@ four:
   student: tabatha
   course: homeroom-b-t1
 
+five:
+  student: andrew
+  course: math7s
+  
+six:
+  student: rich
+  course: math7s
+
