--- a/test/fixtures/terms.yml
+++ b/test/fixtures/terms.yml
@@ -1,17 +1,48 @@
+t0:
+  school_year: 2007-2008
+  name: Full
+  begin_date: 2007/08/01
+  end_date: 2008/06/27
+  active: false
+
 t1:
+  school_year: 2008-2009
   name: GP1
   begin_date: 2008/08/01
   end_date: 2008/11/17
-  active: true
+  active: false
 	
 t2:
+  school_year: 2008-2009
   name: GP2
-  begin_date: 2008/08/01
-  end_date: 2008/11/17
-  active: true
+  begin_date: 2008/11/17
+  end_date: 2009/03/28
+  active: false
 
 t3:
+  school_year: 2008-2009
   name: GP3
-  begin_date: 2008/11/17
-  end_date: 2009/04/28
+  begin_date: 2009/03/28
+  end_date: 2009/06/28
+  active: false
+  
+t4:
+  school_year: 2009-2010
+  name: GP1
+  begin_date: 2009/08/01
+  end_date: 2009/11/17
+  active: true
+	
+t5:
+  school_year: 2009-2010
+  name: GP2
+  begin_date: 2009/11/17
+  end_date: 2010/03/28
+  active: true
+
+t6:
+  school_year: 2009-2010
+  name: GP3
+  begin_date: 2010/03/28
+  end_date: 2010/06/28
   active: false
