--- a/test/fixtures/gradations.yml
+++ b/test/fixtures/gradations.yml
@@ -1,21 +1,21 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  student: tabatha
+  student: studenta
   assignment: fractions_quiz
   points_earned: M
 
 two:
-  student: andrew
+  student: studentb
   assignment: fractions_quiz
   points_earned: 7.0
 
 three:
-  student: rich
+  student: studenta
   assignment: division_test
   points_earned: E
 
 four:
-  student: andrew
+  student: studentb
   assignment: division_test
   points_earned: 75
