--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -86,11 +86,12 @@ admin:
 s1:
   type: Student
   site: campus1
-  login: s1
+  login: ls1
   first_name: Steve
   last_name: Smith
   class_of: 2013
   homeroom: 5Q
+  email: steve@example.com
   password_salt: <%= salt = Authlogic::Random.hex_token %>
   crypted_password: <%= Authlogic::CryptoProviders::Sha512.encrypt('s' + salt) %>
   persistence_token: <%= Authlogic::Random.friendly_token %>
@@ -100,11 +101,12 @@ s1:
 s2:
   type: Student
   site: campus1
-  login: s2
+  login: ls2
   first_name: Jane
   last_name: Doe
   class_of: 2013
   homeroom: 5Q
+  email: jane.doe@example.com
   password_salt: <%= salt = Authlogic::Random.hex_token %>
   crypted_password: <%= Authlogic::CryptoProviders::Sha512.encrypt('s' + salt) %>
   persistence_token: <%= Authlogic::Random.friendly_token %>
@@ -114,7 +116,7 @@ s2:
 s3:
   type: Student
   site: campus1
-  login: s3
+  login: ls3
   first_name: John
   last_name: Doe
   class_of: 2013
@@ -128,11 +130,12 @@ s3:
 s4:
   type: Student
   site: campus1
-  login: s4
+  login: ls4
   first_name: Robert
   last_name: Smith
   class_of: 2013
   homeroom: 5Q
+  email: bob.smith@example.com
   password_salt: <%= salt = Authlogic::Random.hex_token %>
   crypted_password: <%= Authlogic::CryptoProviders::Sha512.encrypt('s' + salt) %>
   persistence_token: <%= Authlogic::Random.friendly_token %>
@@ -142,11 +145,12 @@ s4:
 s5:
   type: Student
   site: campus1
-  login: s5
+  login: ls5
   first_name: Billy
   last_name: Gates
   class_of: 2013
   homeroom: 5Q
+  email: billy.gates@example.com
   password_salt: <%= salt = Authlogic::Random.hex_token %>
   crypted_password: <%= Authlogic::CryptoProviders::Sha512.encrypt('s' + salt) %>
   persistence_token: <%= Authlogic::Random.friendly_token %>
@@ -156,11 +160,12 @@ s5:
 s6:
   type: Student
   site: campus1
-  login: s6
+  login: ls6
   first_name: Stephen
   last_name: Jobs
   class_of: 2013
   homeroom: 5Q
+  email: steve.jobs@example.com
   password_salt: <%= salt = Authlogic::Random.hex_token %>
   crypted_password: <%= Authlogic::CryptoProviders::Sha512.encrypt('s' + salt) %>
   persistence_token: <%= Authlogic::Random.friendly_token %>
