Added 'active' flag to the grading scales.  This should help with future maintenance.

--- a/test/fixtures/grading_scales.yml
+++ b/test/fixtures/grading_scales.yml
@@ -1,8 +1,11 @@
 s:
   name: Standard (A, B, C)
-
+  active: true
+  
 pf:
   name: Pass/Fail
+  active: true
   
 other:
-  name: Other
+  name: Other (Old)
+  active: false
