--- a/test/fixtures/supporting_skill_codes.yml
+++ b/test/fixtures/supporting_skill_codes.yml
@@ -2,10 +2,20 @@
 
 one:
   supporting_skill_id: 1
-  code: MyString
-  description: MyString
+  code: +
+  description: Exceptional performance
 
 two:
   supporting_skill_id: 1
-  code: MyString
-  description: MyString
+  code: ✓
+  description: Satisfactory performance
+
+three:
+  supporting_skill_id: 2
+  code: N
+  description: Need for improvement
+
+four:
+  supporting_skill_id: 3
+  code: NA
+  description: Not applicable
