--- a/test/fixtures/supporting_skills.yml
+++ b/test/fixtures/supporting_skills.yml
@@ -1,54 +1,142 @@
-one:
+langart1:
   supporting_skill_category: langart
   description: Recalls details of story
   active: true
 
-two:
+langart2:
   supporting_skill_category: langart
   description: Speaks clearly and audibly
   active: true
 
-three:
+langart3:
+  supporting_skill_category: langart
+  description: Recognizes own name in print
+  active: true
+
+langart4:
+  supporting_skill_category: langart
+  description: Uses age-appropriate vocabulary
+  active: true
+
+langart5:
+  supporting_skill_category: langart
+  description: Speaks clearly and audibly
+  active: true
+
+langart6:
+  supporting_skill_category: langart
+  description: Works from left to right
+  active: true
+
+langart7:
+  supporting_skill_category: langart
+  description: Arranges picures in sequence
+  active: true
+
+langart8:
+  supporting_skill_category: langart
+  description: Recalls details of story
+  active: true
+
+
+math1:
   supporting_skill_category: math
   description: Counts by rote
   active: true
 
-four:
+math2:
   supporting_skill_category: math
   description: Counts objects
   active: false
 
-five:
+math3:
   supporting_skill_category: math
   description: Measures with nonstandard units
   active: true
 
-five1:
+math5:
   supporting_skill_category: math
   description: Counts on fingers and toes
   active: false
 
-six:
+math6:
+  supporting_skill_category: math
+  description: Identifies basic shapes
+  active: true
+
+math7:
+  supporting_skill_category: math
+  description: Understands positional words
+  active: true
+
+math8:
+  supporting_skill_category: math
+  description: Sorts and classifies by a variety of attribues
+  active: true
+
+math9:
+  supporting_skill_category: math
+  description: Compares objects (i.e. heavier/lighter...)
+  active: true
+
+math10:
+  supporting_skill_category: math
+  description: Demonstrates calendar skills
+  active: true
+
+art1:
   supporting_skill_category: art
   description: Behaviour
   active: true
 
-seven:
+art2:
+  supporting_skill_category: art
+  description: Participates in activities
+  active: true
+
+science1:
   supporting_skill_category: science
   description: Demonstrates the ability to sort or group materials based on their similarities and differences (e.g. states of matter, types of motion, earth materials, living organisms and their environment)
   active: true
 
-eight:
+science2:
+  supporting_skill_category: science
+  description: Labs/activities/projects
+  active: true
+
+science3:
+  supporting_skill_category: science
+  description: Understands and applies concepts
+  active: true
+
+science4:
+  supporting_skill_category: science
+  description: Understands that the position and motion of an object can be changed by pushing or pulling
+  active: true
+
+
+ss1:
   supporting_skill_category: ss
   description: Recognizes basic economic concepts (e.g. scarcity, goods and services, making basic choices)
   active: true
 
-nine:
+ss2:
+  supporting_skill_category: ss
+  description: Demonstrates conecpts of social studies
+  active: true
+
+ss3:
+  supporting_skill_category: ss
+  description: Places events in sequence and uses simple timelines
+  active: true
+
+
+rel1:
   supporting_skill_category: rel
   description: Shows reverence durning liturgy/prayer
   active: true
 
-ten:
-  supporting_skill_category: langart
-  description: Arranges pictures in sequence
+rel2:
+  supporting_skill_category: rel
+  description: Knows basic prayers and Sign of the Cross
   active: true
